--- a/pos.css
+++ b/pos.css
@@ -5,24 +5,24 @@
 #show-output {
   float: left;
   position: relative;
-  border: 1px dotted black;
   width: 30%;
   height: 590px;
 }
-#table {  
+#show-table {  
   width: 100%;
   height: 80%;
   border: 1px dotted black;
 }
 th, td {
-  width: 200px;
+  width: 300px;
   padding: 10px;
   font-weight: bold;
   text-align: center;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 2px solid black;
 }
 .order-menu:hover {
   background-color:#f5f5f5;
+  cursor: pointer;
 }
 #calculate {
   font-size: 22px;
@@ -30,7 +30,7 @@ th, td {
   height: 20%;
   border: 1px dotted black;
 }
-.cal{
+#calculate div{
   padding: 3px;
 }
 #show-input {
@@ -41,26 +41,39 @@ th, td {
   height: 550px;
   padding: 20px;
 }
-.category-item {
+#category-item {
+  border: 1px dotted black;
+  height: 20%;
+}
+.category-btn {
   background-color: brown;
-}
-.menu-item {
-  background-color: burlywood;
-}
-button {
   margin: 10px;
   width: 200px;
   height: 100px;
 }
-#input {
+#menu-item {
   border: 1px dotted black;
-  height: 75%;
+  height: 60%;
 }
-#payment-btn {
-  border: 1px dotted black;
-  height: 25%;
-}
-#payment-btn > button {
-  width: 150px;
+#menu-item button {
+  background-color: burlywood;
+  margin: 10px;
+  width: 200px;
   height: 100px;
+}
+#payment-item{
+  text-align: center;
+  border: 1px dotted black;
+  height: 20%;
+}
+.payment-btn {
+  margin: 10px;
+  width: 200px;
+  height: 100px;
+}
+.q-value {
+  margin-left: 5px;
+  margin-right: 5px;
+  text-align: center;
+  width: 30px;
 }
