--- a/pos.css
+++ b/pos.css
@@ -4,21 +4,24 @@
 }
 
 #menuItems > button {
-   width: 180px;
+   margin: 3% 2% 3% 2% ;
+   width: 20%;
    height: 70px;
 }
 
 #menuItems {
    display: flex;
    flex-wrap: wrap;
-   margin-left: 60px;
+   width: 100%;
+   margin-left: 2%;
+   margin-right: 2%;
 }
+
 
 #menuCategory > button {
    width: 100px;
    height: 40px;
 }
-
 /* 카테고리 색깔 */
 .alcol{background-color: #E8F0F7;}
 .pasta{background-color: #F0DBA3;}
@@ -33,7 +36,6 @@
 }
 
 #menuCategory > button,#menuItems > button {
-   margin: 10px 30px 10px 30px;
    font-size: 20px;
    color: black;
    border-radius: 40px;
@@ -42,8 +44,13 @@
 #menuCategory {
    display: flex;
    justify-content: space-around;
-   margin-top: 10px;
-   margin-bottom: 20px;
+   margin-top: 3%;
+   margin-bottom: 3%;
+}
+
+#menu {
+   display: flex;
+   flex-direction: column;
 }
 
 #payment>button:hover,
@@ -68,30 +75,46 @@ button {
    flex-direction: row-reverse;
    height: 130px;
 }
-#orderContent>div {
-   display: flex;
-   justify-content: space-around;
-}
-#orderContent {
-   overflow: scroll;
-   display: flex;
-   flex-direction: column;
-   height: 320px;
+
+#orderContent div span {
+   width: 100%;
 }
 
-#orderTitle {
+#orderContent div:nth-child(odd){
+   margin-right: 0.1px;
+   background-color: #82acf3;
+}
+
+#orderContent div {
    display: flex;
    justify-content: space-around;
    margin-bottom: 10px;
 }
 
+#orderContent {
+   overflow: scroll;
+   display: flex;
+   flex-direction: column;
+   height: 360px;
+}
+
+#orderTitle span{
+   width: 100%;
+}
+
+#orderTitle {
+   display: flex;
+   justify-content: space-around;
+   margin: 10px 3% 10px 1%;
+}
+
 #payment {height: 150px;}
 
-#menu {height: 450px;}
+#menu {height: 500px;}
 
 #calculator {height: 150px;}
 
-#order{height: 450px;}
+#order{height: 500px;}
 
 
 
@@ -103,15 +126,16 @@ button {
 }
 
 #leftSection {
-   /* margin: 위 오른쪽 아래 왼쪽 */
    background-color: #96bdff;
-   margin: 0 10px 0 20px;
-   width: 550px;
+   margin-left: 6%;
+   margin-right: 1%;
+   width: 50%;
 }
 #rightSection {
    background-color: #96bdff;
-   margin: 0 20px 0 10px;
-   width: 950px;
+   margin-left: 1%;
+   margin-right: 6%;
+   width: 60%;
 }
 
 body {
