--- a/calc/calc.css
+++ b/calc/calc.css
@@ -1,22 +1,22 @@
 body {
    display: flex;
    flex-wrap: wrap;
+   justify-content: space-around;
+   align-items: center;
+   /* border: 2px solid red; */
    box-sizing : border-box;
    margin: 0;
    padding: 0;
 }
 
 body div {
+   /* border: 2px solid tan; */
    width: 400px;
-   height: 50px;
+   height: 28px;
    text-align: center;
 }
 body button {
-   width: 125px;
-   height: 56px;
-   margin-left: 2px;
-   margin-right: 2px;
-}
-body button:nth-child(18){
-   width: 254px;
+   width: 124px;
+   height: 50px;
+   margin-bottom: 7px;
 }
