--- a/calc/calc.css
+++ b/calc/calc.css
@@ -1,22 +1,52 @@
-body {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-around;
-   align-items: center;
-   /* border: 2px solid red; */
-   box-sizing : border-box;
-   margin: 0;
-   padding: 0;
+* {margin: 0;padding: 0;box-sizing: border-box;}
+
+html,body {
+   position: relative;  /* 부모 postion: relative로 선언 */
+   width: 100%;
+   height: 100%;
 }
 
-body div {
-   /* border: 2px solid tan; */
-   width: 400px;
-   height: 28px;
-   text-align: center;
+body {
+   background: #6fc2ce;
 }
-body button {
-   width: 124px;
-   height: 50px;
-   margin-bottom: 7px;
+
+div {
+   position: absolute;  /* 절대적 포지션*/
+   top: 10px;
+   left: 10px;
+   right: 10px;
+   bottom: 10px;
+   background: #505050;
 }
+
+input {
+   outline: 0;
+   border: 0;
+   position: relative;
+   margin-top: 2.8%;
+   margin-left: 2.6%;
+   width: 94%;
+   height: 18%;
+   font-size: 7em;
+   text-align: right;
+   background: #ccfe81 ;
+   color: #616161;
+}
+button {
+   position: relative;
+   outline: 0;
+   border: 0;
+   width: 21%;
+   height: 16.5%;
+   margin-top: 2.8%;
+   margin-left: 2.7%;
+   color: white;
+   font-size: 4em;
+}
+
+.blue {background: #0080c0;}
+
+.gray {background: #c0c0c0;}
+
+.result,.clear {background: #ff8080;}
+
